--- a/src/Foundation/Multisite/serialization/Templates/Multisite/Datasource Settings Folder.yml
+++ b/src/Foundation/Multisite/serialization/Templates/Multisite/Datasource Settings Folder.yml
@@ -1,20 +1,20 @@
 ﻿---
-ID: "89f9331f-552a-4e37-93d6-d12bf3492eed"
+ID: "2af9514c-4fc4-41ef-b12a-658555e41247"
 Parent: "7c911c60-3111-4547-a1de-a98e404ef91b"
 Template: "ab86861a-6030-46c5-b394-e8f99e8b87db"
-Path: /sitecore/templates/Foundation/Multisite/Site Settings Root
+Path: /sitecore/templates/Foundation/Multisite/Datasource Settings Folder
 DB: master
 SharedFields:
 - ID: "06d5295c-ed2f-4a54-9bf2-26228d113318"
   Hint: __Icon
-  Value: Apps/32x32/Setting.png
+  Value: Applications/32x32/folder_gear.png
 - ID: "12c33f3f-86c5-43a5-aeb4-5598cec45116"
   Hint: __Base template
   Type: tree list
-  Value: "{1930BBEB-7805-471A-A3BE-4858AC7CF696}"
+  Value: "{E98CFBDD-011A-4FF4-942C-856CA9B7F6C0}"
 - ID: "f7d48a55-2158-4f02-9356-756654404f73"
   Hint: __Standard values
-  Value: "{C38B9D11-0121-4819-AB26-FC4CA073D323}"
+  Value: "{9DF1896B-BBC1-4D92-B78A-E467B192860B}"
 Languages:
 - Language: en
   Versions:
@@ -22,4 +22,4 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20191121T065923Z
+      Value: 20191121T071712Z
